[project]
name = "renovate-vuln-report"
version = "0.1.0"
description = "Report vulnerabilities in Renovate pull request image updates"
readme = "README.md"
authors = [
    { name = "acidghost", email = "acidghost@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "oras==0.2.42",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "ty==0.0.51",
]

[project.scripts]
renovate-vuln-report = "renovate_vuln_report.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "1 week"
